--- a/client/videos-app/src/App.css
+++ b/client/videos-app/src/App.css
@@ -1,38 +1,141 @@
+@import './variables.css';
+
+
 .App {
-  text-align: center;
+    display: flex;
+    text-align: center;
+    padding: 10px 10px 10px 0px;
+}
+
+.content {
+    /* margin-left: 20px; */
+    padding: 0;
+    width: calc(100% - 80px);
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: var(--global-text-color);
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.top-menu {
+    /* 涨满整个宽度 */
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: left;
+    color: var(--global-text-color);
+    padding: 0px 0px 30px 0px;
+}
+
+.menu-space {
+    flex: 1;
+    max-width: 100%;
+    /* align-items: left; */
+}
+
+.search-box {
+    /* flex: 1; */
+    max-width: 300px;
+    height: 30px;
+    padding: 10px;
+    margin-right: 20px;
+    border-radius: 20px;
+    border: none;
+    background-color: var(--global-background-color);
+    color: var(--global-text-color);
+}
+
+.menu-icons {
+    display: flex;
+    gap: 10px;
+    padding: 0px 20px 0px 0px;
+}
+
+.icon-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    color: var(--global-text-color);
+    padding: 10px;
+}
+
+.icon-button-menu {
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    color: var(--global-text-color);
+    margin: 0px 20px 0px 10px;
+}
+
+.user-icon {
+    display: flex;
+    align-items: center;
+}
+
+.user-photo {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: var(--global-background-color);
+}
+
+
+
+.container {
+    /* border: 1px solid black; */
+    border-radius: 10px;
+    background-color: rgb(31, 41, 55);
+    padding: 10px;
+
+}
+.container-title {
+    /* 左边对齐 */
+    text-align: left;
+    font-size: 30px;
+    font-weight: bold;
+    color: var(--global-text-color);
+    padding: 10px;
+}
+.container-content {
+    text-align: left;
+    min-height: 300px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 10px;
 }
