add search box style , pagination style

--- a/client/videos-app/src/Movies.css
+++ b/client/videos-app/src/Movies.css
@@ -44,3 +44,33 @@
     margin: 5px 0 0;
     font-size: 14px;
 }
+.pagination {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+  }
+  
+  .pagination button {
+    margin: 0 10px;
+    padding: 5px 10px;
+    border: none;
+    background-color: var(--global-background-color-button);
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  
+  .pagination button.active {
+    background-color: var(--global-background-color-button-active);
+    border: none;
+  }
+  
+  .pagination button:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+  }
+  
+  .pagination span {
+    margin: 0 5px;
+    padding: 5px 10px;
+  }
