--- a/client/videos-app/src/App.css
+++ b/client/videos-app/src/App.css
@@ -79,6 +79,7 @@
 }
 
 .search-icon {
+    font-size: 16px;
     background: none;
     color: var(--global-text-color);
     border: none;
@@ -143,12 +144,19 @@
 }
 
 .container-title {
-    /* 左边对齐 */
-    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    /* text-align: left; */
     font-size: 30px;
     font-weight: bold;
     color: var(--global-text-color);
-    padding: 10px;
+    padding: 10px 20px 10px 20px;
+}
+
+.container-subtitle {
+    font-size: 18px;
+    font-weight: normal;
+    align-self: flex-end;
 }
 
 .container-content {
@@ -160,3 +168,7 @@
     gap: 10px;
     padding: 10px;
 }
+
+.spacer {
+    flex-grow: 1;
+  }
