--- a/client/videos-app/src/variables.css
+++ b/client/videos-app/src/variables.css
@@ -1,4 +1,13 @@
+/* 'rgb(254, 228, 203)',
+'rgb(209, 213, 219)',
+'rgb(187, 247, 208)',
+'rgb(191, 219, 254)',
+'rgb(254, 202, 202)',
+'rgb(233, 213, 255)' */
 :root{
     --global-background-color: #1f2937;
     --global-text-color: white;
+    --global-background-color-button: rgb(254, 228, 203);
+    --global-background-color-button-active: rgb(187, 247, 208);
+    --global-background-color-button-disable: rgb(254, 202, 202);
 }
