--- a/client/videos-app/src/App.css
+++ b/client/videos-app/src/App.css
@@ -139,7 +139,7 @@
     /* border: 1px solid black; */
     border-radius: 10px;
     background-color: rgb(31, 41, 55);
-    padding: 10px;
+    padding: 20px;
 
 }
 
@@ -150,7 +150,7 @@
     font-size: 30px;
     font-weight: bold;
     color: var(--global-text-color);
-    padding: 10px 20px 10px 20px;
+    /* padding: 0px 0px 10px 0px; */
 }
 
 .container-subtitle {
