--- a/client/videos-app/src/Movies.css
+++ b/client/videos-app/src/Movies.css
@@ -3,21 +3,16 @@
 .ul-movies {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     list-style-type: none;
     padding: 0;
-    align-self: left;
-
+    /* align-self: center; */
 }
 .ul-movies li {
     margin: 10px;
-    /* padding: 10px; */
     width: 200px;
     height: 300px;
-    /* border: 1px solid #ccc; */
     border-radius: 15px;
-    background-color: rgb(153, 153, 153);
-    /* box-shadow: 2px 2px 2px #ccc; */
 }
 
 .ul-movies li img {
