--- a/client/videos-app/src/variables.css
+++ b/client/videos-app/src/variables.css
@@ -10,4 +10,5 @@
     --global-background-color-button: white;
     --global-background-color-button-active: rgb(187, 247, 208);
     --global-background-color-button-disable: grey;
+    --global-label-color: #8a8a8a;
 }
