--- a/client/videos-app/src/Movies.css
+++ b/client/videos-app/src/Movies.css
@@ -39,6 +39,12 @@
     margin: 5px 0 0;
     font-size: 14px;
 }
+.movie-name {
+  white-space: nowrap; /* 防止换行 */
+  overflow: hidden; /* 隐藏溢出内容 */
+  text-overflow: ellipsis; /* 显示省略号 */
+  max-width: 100%; /* 根据需要设置最大宽度 */
+}
 .pagination {
     display: flex;
     justify-content: center;
