--- a/client/videos-app/src/index.css
+++ b/client/videos-app/src/index.css
@@ -1,9 +1,13 @@
 @import './variables.css';
+
 body {
+
+  font-family: 'Microsoft YaHei', sans-serif ,'Arial', 'Helvetica';
+
   /* margin: 20px; */
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  /* font-family: 'Microsoft YaHei',sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    sans-serif; */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: rgb(17, 24, 39);
@@ -14,4 +18,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
