--- a/client/videos-app/src/App.css
+++ b/client/videos-app/src/App.css
@@ -5,6 +5,7 @@
     display: flex;
     text-align: center;
     padding: 10px 10px 10px 0px;
+    background-color: var(--global-web-background-color);
 }
 
 .content {
@@ -18,6 +19,7 @@
     pointer-events: none;
 }
 
+
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
         animation: App-logo-spin infinite 20s linear;
@@ -25,7 +27,7 @@
 }
 
 .App-header {
-    background-color: #282c34;
+    /* background-color: #282c34; */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
