use url navigate

--- a/client/videos-app/src/MovieDetail.css
+++ b/client/videos-app/src/MovieDetail.css
@@ -57,7 +57,7 @@
   
   .horizontal-list a {
     text-decoration: none;
-    color: green;
+    color: rgb(223, 250, 210);
   }
   
   .horizontal-list a:hover {
