--- a/client/videos-app/src/MovieDetail.css
+++ b/client/videos-app/src/MovieDetail.css
@@ -8,11 +8,14 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    position: relative;
   }
   
   .movie-title {
     /* text-align: left; */
     margin-bottom: 20px;
+    margin-left: 60px;
+    margin-right: 60px;
   }
   
   .top {
@@ -79,4 +82,43 @@
   .down h1 {
     color: var(--global-label-color);
     font-size: 23px;
+  }
+
+  .back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    /* background-color: #333;
+    color: white; */
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000; 
+  }
+  
+  .back-button:hover {
+    background-color: #555;
+  }
+
+  .related-pictures {
+    margin-top: 20px;
+  }
+  
+  .pictures-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  
+  .pictures-gallery img {
+    max-width: 165px;
+    max-height: 165px;
+    object-fit: cover;
   }
