add play link manager

--- a/client/videos-app/src/PlayLink.css
+++ b/client/videos-app/src/PlayLink.css
@@ -1,21 +1,147 @@
-.playlink-popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: white;
-    padding: 20px;
-    border: 1px solid #ccc;
-    z-index: 1000;
-  }
-  
-  .create-section,
-  .manage-section {
-    margin-bottom: 20px;
-  }
-  
-  .playlink-item {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 10px;
-  }
+@import './variables.css';
+
+.popup-window {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.popup-inner {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  /* justify-content: center; */
+  min-height: 30%;
+  min-width: 50%;
+  max-width: 80%;
+  max-height: 80%;
+  background-color: var(--global-background-color);
+  padding: 20px;
+  border-radius: 15px;
+  gap: 20px;
+}
+
+.popup-space {
+  /* 纵向占满整个高度 */
+  flex: 1;
+}
+
+.dialog-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+}
+
+.dialog-bottom {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+
+.close-popup-button {
+  flex: 1;
+  color: rgb(167, 8, 8);
+
+}
+
+.popup-inner button {
+  padding: 10px;
+  margin-left: 10px;
+  width: 40px;
+
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(187, 187, 187);
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.popup-inner button i {
+  font-size: 16px;
+  line-height: 1;
+}
+
+.create-section{
+  width: 100%;
+}
+.manage-section {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+/* .playlink-item {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+} */
+
+.table-row {
+  display: flex;
+   align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.cell-1 {
+  /* border: 1px solid var(--global-web-background-color); */
+  flex: 2;
+}
+
+.cell-2 {
+  /* border: 1px solid var(--global-web-background-color); */
+  flex: 6;
+}
+
+.cell-3 {
+  /* border: 1px solid var(--global-web-background-color); */
+  flex: 2;
+}
+
+.table-row input  {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  margin: 0px;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--global-web-background-color);
+  color: var(--global-text-color);
+}
+
+.table-col {
+  width: 100%;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 5px;
+  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.table-col span {
+  padding-left: 5px;
+  word-wrap: break-word; /* 允许长单词换行 */
+  word-break: break-all; /* 允许长单词在任何地方换行 */
+}
+
+.divider {
+  width: 100%;
+  border: none;
+  border-top: 1px solid #494949; /* 定制分割线的颜色和样式 */
+
+}
