add playLinks in movieDetail

--- a/client/videos-app/src/MovieDetail.css
+++ b/client/videos-app/src/MovieDetail.css
@@ -121,3 +121,14 @@
     gap: 20px;
   }
   
+  .play-panel {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .down-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
