--- a/client/videos-app/src/PlayLink.css
+++ b/client/videos-app/src/PlayLink.css
@@ -56,7 +56,16 @@
 
 }
 
-.popup-inner button {
+
+
+.dialog-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+/* .dialog-content button {
   padding: 10px;
   margin-left: 10px;
   width: 40px;
@@ -68,12 +77,13 @@
   display: flex;
   justify-content: center;
   gap: 8px;
-}
+} */
 
-.popup-inner button i {
+/* .dialog-content button i {
   font-size: 16px;
   line-height: 1;
-}
+} */
+
 
 .create-section{
   width: 100%;
@@ -109,7 +119,9 @@
 
 .cell-3 {
   /* border: 1px solid var(--global-web-background-color); */
-  flex: 2;
+  /* flex: 2; */
+  display:flex;
+  width: 120px;
 }
 
 .table-row input  {
