--- a/client/videos-app/src/MovieDetail.css
+++ b/client/videos-app/src/MovieDetail.css
@@ -118,6 +118,7 @@
   .button-bar {
     display: flex;
     justify-content: flex-end;
+    /* align-items: flex-start; */
     gap: 20px;
   }
   
@@ -130,5 +131,5 @@
   .down-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
   }
