--- a/client/videos-app/src/components/CommonButtons.css
+++ b/client/videos-app/src/components/CommonButtons.css
@@ -24,7 +24,7 @@
     border-radius: 5px;
     width: 36px;
     height: 36px;
-    margin: 5px;
+    /* margin: 5px; */
 }
 
 .menu-button {
@@ -38,7 +38,7 @@
 .text-button {
     background-color: white;
     min-width: 60px;
-    height: 40px;
+    height: 36px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
@@ -50,5 +50,6 @@
 .text-button i {
     font-size: 1em;
     padding-right: 10px;
-    color: #0365f7;
+    /* color: #0365f7; */
+    color:rgb(240, 55, 55);
 }
