--- a/client/videos-app/src/variables.css
+++ b/client/videos-app/src/variables.css
@@ -8,6 +8,7 @@
     --global-web-background-color: #111827;
     --global-background-color: #1f2937;
     --global-text-color: white;
+    --global-focus-color: #60aedb;
     --global-background-color-button: white;
     --global-background-color-button-active: #bbf7d0;
     --global-background-color-button-disable: grey;
