update koa api path

--- a/client/videos-app/src/App.css
+++ b/client/videos-app/src/App.css
@@ -11,7 +11,7 @@
 .main {
     max-width: 1200px; /* 你可以根据需要调整这个值 */
     margin: 0 auto; /* 将容器居中 */
-    padding: 0 20px; /* 可选：为容器添加一些内边距 */
+    /* padding: 0 0px;  */
   }
 
 .content {
