--- a/client/videos-app/src/App.css
+++ b/client/videos-app/src/App.css
@@ -1,12 +1,24 @@
 @import './variables.css';
 
-/* before bootstrap */
-
 .App {
     display: flex;
+    flex-direction: column;
     text-align: center;
-    padding: 10px 10px 10px 0px;
-    background-color: var(--global-web-background-color);
+    /* padding: 10px; */
+    
+}
+
+.App-menu {
+    height: 80px;
+}
+
+.App-body {
+    display: flex;
+    width: 100%;
+}
+
+.App-bottom {
+    width: 100%;
 }
 
 .main {
@@ -18,7 +30,9 @@
 .content {
     /* margin-left: 20px; */
     padding: 0;
-    width: calc(100% - 80px);
+    /* width: calc(100% - 0px); */
+    width: 100%;
+    display: flex;
 }
 
 .App-logo {
@@ -33,16 +47,6 @@
     }
 }
 
-.App-header {
-    /* background-color: #282c34; */
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: var(--global-text-color);
-}
 
 .App-link {
     color: #61dafb;
@@ -126,7 +130,7 @@
 
 .container-content {
     text-align: left;
-    min-height: 300px;
+    min-height: 500px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
