--- a/client/videos-app/src/AppNavbar.css
+++ b/client/videos-app/src/AppNavbar.css
@@ -3,37 +3,35 @@
 
 .navbar {
   background-color: transparent;
-  padding: 0px;
+  
+  /* padding: 0px; */
   width: 80px;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  /* 改为相对定位 */
+  align-self: flex-start;
+
+  /* position: relative; */
 }
 
-.logo-container {
-  /* margin-bottom: 20px; */
-  margin: 0 20px 20px 0;
-}
-
-.logo {
-  width: 60px;
-  /* height: 40px; */
-  /* border-radius: 50%; */
-}
 
 .navbar ul {
+  margin-top: 30px;
   list-style-type: none;
-  padding: 0;
-  margin: 0;
+  /* padding: 0;
+  margin: 0; */
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-self: center;
+  gap: 50px;
+
 }
 
 .navbar ul li {
-  width: 100%;
-  margin: 30px 0;
+  width: 100px;
 }
 
 .navbar ul li a {
