--- a/client/videos-app/src/AppTopMenu.css
+++ b/client/videos-app/src/AppTopMenu.css
@@ -9,12 +9,25 @@
     align-items: left;
     color: var(--global-text-color);
     padding: 0px 0px 30px 0px;
+    height: 100px;
 }
 
 .menu-space {
     flex: 1;
     max-width: 100%;
     /* align-items: left; */
+}
+
+.logo-container {
+    width: 80px;
+    max-height: 80px;
+    align-items: center;
+    align-self: center;
+}
+
+.logo-container img {
+    width: 60px;
+    max-height: 60px;
 }
 
 .search-container {
@@ -48,12 +61,12 @@
     color: var(--global-text-color);
 }
 
-
 .menu-icons {
     display: flex;
     gap: 10px;
     padding: 0px 20px 0px 0px;
 }
+
 .user-icon {
     display: flex;
     align-items: center;
