--- a/client/videos-app/src/AppTopMenu.css
+++ b/client/videos-app/src/AppTopMenu.css
@@ -1,15 +1,15 @@
-
 /* @import '~bootstrap/scss/dropdown'; */
 
 .top-menu {
     /* 涨满整个宽度 */
     width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: left;
+    /* justify-content: space-between; */
+    align-items: center;
     color: var(--global-text-color);
-    padding: 0px 0px 30px 0px;
-    height: 100px;
+
+    height: 80px;
+    padding-right: 10px;
 }
 
 .menu-space {
@@ -28,37 +28,6 @@
 .logo-container img {
     width: 60px;
     max-height: 60px;
-}
-
-.search-container {
-    display: flex;
-    align-items: center;
-    max-width: 300px;
-    height: 30px;
-    padding: 10px;
-    margin-right: 20px;
-    border-radius: 20px;
-    border: none;
-    background-color: var(--global-background-color);
-    color: var(--global-text-color);
-}
-
-.search-icon {
-    font-size: 16px;
-    background: none;
-    color: var(--global-text-color);
-    border: none;
-    cursor: pointer;
-    padding: 0 10px;
-}
-
-.search-box {
-    flex: 1;
-    padding: 10px;
-    border: none;
-    outline: none;
-    background-color: var(--global-background-color);
-    color: var(--global-text-color);
 }
 
 .menu-icons {
@@ -85,7 +54,7 @@
     position: absolute;
     right: 0;
     background-color: white;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
@@ -100,3 +69,4 @@
 .dropdown-menu button:hover {
     background-color: #f1f1f1;
 }
+
