--- a/client/videos-app/src/custom-bootstrap.scss
+++ b/client/videos-app/src/custom-bootstrap.scss
@@ -24,22 +24,103 @@
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
 
-// 自定义变量
-$primary: #1f2937; // 自定义主色
-$secondary: #111827; // 自定义次色
-$success: #28a745;
-$info: #17a2b8;
-$warning: #ffc107;
-$danger: #dc3545;
-$light: #f8f9fa;
-$dark: #343a40;
+$myBg: #111827 !default;
+$myContentBg: #1f2937 !default;
+$myText: white !default;
+$myButtonBg: white !default;
+$myButtonActiveBg: #bbf7d0 !default;
+$myButtonDisableBg: grey !default;
+$myLabelColor: #8a8a8a !default;
 
-$body-color:white;
+
+// Colors
+$blue: #0a46a0 !default; // #0d6efd !default;
+$indigo: #6610f2 !default;
+$purple: #6f42c1 !default;
+$pink: #d63384 !default;
+$red: #dc3545 !default;
+$orange: #fd7e14 !default;
+$yellow: #ffc107 !default;
+$green: #0c472b !default; // #198754 !default;
+$teal: #20c997 !default;
+$cyan: #0dcaf0 !default;
+$white: #fff !default;
+$gray: #6c757d !default;
+$gray-dark: #343a40 !default;
+$primary: $myBg !default; //$blue !default;
+$secondary: $myContentBg !default; //$gray !default;
+$success: $green !default;
+$info: $cyan !default;
+$warning: $yellow !default;
+$danger: $red !default;
+$light: $gray-100 !default;
+$dark: $gray-900 !default;
+
+// Body
+$body-bg: $white !default;
+$body-color: $myText !default; //$gray-900 !default;
+
+// Links
+$link-color: $primary !default;
+$link-decoration: none !default;
+$link-hover-color: darken($link-color, 15%) !default;
+$link-hover-decoration: underline !default;
+
+// Buttons
+$btn-padding-y: .375rem !default;
+$btn-padding-x: .75rem !default;
+$btn-font-family: null !default;
+$btn-font-size: $font-size-base !default;
+$btn-font-weight: $font-weight-normal !default;
+$btn-line-height: $line-height-base !default;
+$btn-white-space: null !default;
+$btn-color: $body-color !default;
+$btn-bg: $body-bg !default;
+$btn-border-width: $border-width !default;
+$btn-border-color: $body-bg !default;
+$btn-border-radius: $border-radius !default;
+$btn-hover-border-color: $btn-border-color !default;
+$btn-focus-width: $input-btn-focus-width !default;
+$btn-focus-box-shadow: $input-btn-focus-box-shadow !default;
+$btn-disabled-opacity: .65 !default;
+$btn-active-box-shadow: null !default;
+$btn-success-bg: red !important;
+$btn-success-color: $body-color !default;
+
 
 body {
     background-color: #111827 !important;
-    font-family: 'Microsoft YaHei', sans-serif ,'Arial', 'Helvetica';
+    font-family: 'Microsoft YaHei', sans-serif, 'Arial', 'Helvetica';
 }
+
+// 自定义 Dropdown 菜单的背景颜色
+.dropdown-menu {
+    background-color: $myContentBg !important;
+    color: $myText !important;
+}
+
+.dropdown-menu a {
+    color: $myText !important;  
+}
+
+
+.dropdown-menu a:hover {
+    background-color: $myBg !important;
+}
+
+.dropdown-toggle {
+    // background-image: $toggleImage;
+    background-color: $myBg !important;
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    border-color: $myBg !important;
+    width: 60px;
+    height: 40px;
+    border: none;
+    padding: 0;
+}
+
 
 // 导入 Bootstrap 的其余部分
 @import '~bootstrap/scss/bootstrap';
