--- a/client/videos-app/src/Login.css
+++ b/client/videos-app/src/Login.css
@@ -50,6 +50,9 @@
     color: var(--global-label-color);
 }
 
+.login-form h2 {
+    color: var(--global-text-color);
+}
 
 .login-form input {
     width: 100%;
