--- a/client/videos-app/src/MovieDetail.css
+++ b/client/videos-app/src/MovieDetail.css
@@ -1,135 +1,140 @@
 @import './variables.css';
 
-.loading{
-    background-color: var(--global-background-color);
+.loading {
+  background-color: var(--global-background-color);
 }
 
 .movie-detail {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    position: relative;
-  }
-  
-  .movie-title {
-    /* text-align: left; */
-    margin-bottom: 20px;
-    margin-left: 60px;
-    margin-right: 60px;
-  }
-  
-  .top {
-    display: flex;
-    gap: 20px;
-  }
-  
-  .top-left {
-    flex: 1;
-    text-align: right;
-    padding: 20px 0px;
-  }
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+}
 
-  .top-left img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    cursor: pointer;
-  }
-  
-  .top-right {
-    flex: 1;
-  }
-  
-  .top-mid{
-    /* flex: 1; */
-    width: 1px;
-    background-color: var(--global-label-color);
-    /* padding: 0px 0px; */
-  }
+.movie-title {
+  /* text-align: left; */
+  margin-bottom: 20px;
+  margin-left: 60px;
+  margin-right: 60px;
+}
 
-  .top-right p {
-    display: flex;
-    align-items: center;
-  }
-  
-  .horizontal-list {
-    display: flex;
-    flex-wrap: wrap; /* 允许换行 */
-    gap: 10px; 
-  }
-  
-  .horizontal-list span {
-    display: inline; /* 横向排列 */
-    /* padding: 0px 2px 2px 2px;  */
-    text-align: left;
-    align-self: start;
-  }
-  
-  .horizontal-list a {
-    text-decoration: none;
-    color: rgb(223, 250, 210);
-  }
-  
-  .horizontal-list a:hover {
-    background-color: #333; /* 设置鼠标悬停时的背景色 */
-    /* padding: 2px 5px; */
-    border-radius: 3px;
-  }
+.top {
+  display: flex;
+  gap: 20px;
+}
 
-  .label {
-    color: var(--global-label-color);
-    /* font-size: 20px; */
-  }
-  
-  .down {
-    padding: 20px ;
-    text-align: left;
-  }
+.top-left {
+  flex: 1;
+  text-align: right;
+  padding: 20px 0px;
+}
 
-  .down h1 {
-    color: var(--global-label-color);
-    font-size: 23px;
-  }
+.top-left img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  cursor: pointer;
+}
 
-  .back-button {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    z-index: 1000; /* 使得返回按钮在最上层 */
-  }
+.top-right {
+  flex: 1;
+}
 
-  .related-pictures {
-    margin-top: 20px;
-  }
-  
-  .pictures-gallery {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
-  
-  .pictures-gallery img {
-    max-width: 165px;
-    max-height: 165px;
-    object-fit: cover;
-    cursor: pointer;
-  }
+.top-mid {
+  /* flex: 1; */
+  width: 1px;
+  background-color: var(--global-label-color);
+  /* padding: 0px 0px; */
+}
 
-  .button-bar {
-    display: flex;
-    justify-content: flex-end;
-    /* align-items: flex-start; */
-    gap: 20px;
-  }
-  
-  .play-panel {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
+.top-right p {
+  display: flex;
+  align-items: center;
+}
 
-  .down-header {
-    display: flex;
-    justify-content: space-between;
-    /* align-items: center; */
-  }
+.horizontal-list {
+  display: flex;
+  flex-wrap: wrap;
+  /* 允许换行 */
+  gap: 10px;
+}
+
+.horizontal-list span {
+  display: inline;
+  /* 横向排列 */
+  /* padding: 0px 2px 2px 2px;  */
+  text-align: left;
+  align-self: start;
+}
+
+.horizontal-list a {
+  text-decoration: none;
+  color: rgb(223, 250, 210);
+}
+
+.horizontal-list a:hover {
+  background-color: #333;
+  /* 设置鼠标悬停时的背景色 */
+  /* padding: 2px 5px; */
+  border-radius: 3px;
+}
+
+.label {
+  color: var(--global-label-color);
+  /* font-size: 20px; */
+}
+
+.down {
+  padding: 20px;
+  text-align: left;
+}
+
+.down h1 {
+  color: var(--global-label-color);
+  font-size: 23px;
+}
+
+.back-button {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  z-index: 1000;
+  /* 使得返回按钮在最上层 */
+}
+
+.related-pictures {
+  margin-top: 20px;
+}
+
+.pictures-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.pictures-gallery img {
+  max-width: 165px;
+  max-height: 165px;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.button-bar {
+  display: flex;
+  justify-content: flex-end;
+  /* align-items: flex-start; */
+  gap: 20px;
+}
+
+.play-panel {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+.down-header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  /* align-items: center; */
+}
