--- a/client/videos-app/src/custom-bootstrap.scss
+++ b/client/videos-app/src/custom-bootstrap.scss
@@ -1,25 +1,3 @@
-// custom-bootstrap.scss
-
-// --global-web-background-color: #111827;
-// --global-background-color: #1f2937;
-// --global-text-color: white;
-// --global-focus-color: #60aedb;
-// --global-background-color-button: white;
-// --global-background-color-button-active: #bbf7d0;
-// --global-background-color-button-disable: grey;
-// --global-label-color: #8a8a8a;
-
-// --rainbowColor1: rgb(254, 228, 203);
-// --rainbowColor2: rgb(209, 213, 219);
-// --rainbowColor3: rgb(187, 247, 208);
-// --rainbowColor4: rgb(191, 219, 254);
-// --rainbowColor5: rgb(254, 202, 202);
-// --rainbowColor6: rgb(233, 213, 255);
-// --rainbowColor7: rgb(254, 228, 203);
-
-
-
-
 // 导入 Bootstrap 的功能和变量
 @import '~bootstrap/scss/functions';
 @import '~bootstrap/scss/variables';
@@ -93,6 +71,10 @@ body {
     font-family: 'Microsoft YaHei', sans-serif, 'Arial', 'Helvetica';
 }
 
+h2{
+    color: $myText ;
+}
+
 // 自定义 Dropdown 菜单的背景颜色
 .dropdown-menu {
     background-color: $myContentBg !important;
@@ -120,7 +102,6 @@ body {
     border: none;
     padding: 0;
 }
-
 
 // 导入 Bootstrap 的其余部分
 @import '~bootstrap/scss/bootstrap';
