update Tags css

--- a/client/videos-app/src/App-popup.css
+++ b/client/videos-app/src/App-popup.css
@@ -42,6 +42,13 @@
   margin: 0;
 }
 
+.dialog-body{
+  /* width: 100%; */
+  display: flex;
+  flex:1;
+  /* gap: 20px; */
+}
+
 .dialog-bottom {
   width: 100%;
   display: flex;
