--- a/client/videos-app/src/Tags.css
+++ b/client/videos-app/src/Tags.css
@@ -12,7 +12,7 @@
   .new-tag {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
   }
   
   .new-tag input {
