--- a/client/videos-app/src/components/MovieSlider.css
+++ b/client/videos-app/src/components/MovieSlider.css
@@ -7,8 +7,10 @@
   .movie-container {
     display: flex;
     overflow: hidden;
+    margin-left: 20px;
+    margin-right: 20px;
     /* width: 80%; */
-    margin: 0 auto; /* 使容器居中 */
+    /* margin: 0 auto; */
   }
   
   .nav-button {
@@ -33,9 +35,9 @@
   }
   
   .nav-button:first-of-type {
-    left: 35px; /* 调整按钮位置，使其一半在容器外 */
+    left: 10px; /* 调整按钮位置，使其一半在容器外 */
   }
   
   .nav-button:last-of-type {
-    right: 35px; /* 调整按钮位置，使其一半在容器外 */
+    left: 870px; /* 调整按钮位置，使其一半在容器外 */
   }
