--- a/client/videos-app/src/PlayList.css
+++ b/client/videos-app/src/PlayList.css
@@ -16,3 +16,45 @@
     font-size: 1.5rem;
     color: var(--global-text-color);
 }
+
+.play-list-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: 30px;
+    margin-right: 30px;
+    /* width: 100%; */
+    
+    
+}
+
+.play-list-title {
+    text-decoration: none;
+    color: inherit;
+    cursor: pointer;
+    display: flex;
+    font-size: 1.6rem;
+    
+    
+}
+
+.play-list-subtitle {
+    margin-left: 10px;
+    color: var(--global-label-color);
+}
+
+.view-all-button {
+    background-color: transparent;
+    color: var(--global-text-color);
+    padding: 5px 10px;
+    border: 1px solid var(--global-text-color);
+    border-radius: 15px;
+    text-decoration: none;
+    display: inline-block;
+    
+    cursor: pointer;
+}
+
+.view-all-button:hover {
+    background-color: var(--global-label-color);
+}
