--- a/client/videos-app/src/components/MovieSlider.css
+++ b/client/videos-app/src/components/MovieSlider.css
@@ -2,7 +2,7 @@
     position: relative;
     display: flex;
     align-items: center;
-    height: 400px;
+    /* height: 400px; */
   }
   
   .movie-slider-container {
