--- a/client/videos-app/src/PlayList.css
+++ b/client/videos-app/src/PlayList.css
@@ -58,3 +58,14 @@
 .view-all-button:hover {
     background-color: var(--global-label-color);
 }
+
+.play-list-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    /* overflow-x: auto; */
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
