add icon button , fixed login

--- a/client/videos-app/src/components/CommonButtons.css
+++ b/client/videos-app/src/components/CommonButtons.css
@@ -53,3 +53,21 @@
     /* color: #0365f7; */
     color:rgb(240, 55, 55);
 }
+
+.icon-button {
+    background-color: white;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2em;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}   
+
+.icon-button i {
+    font-size: 1.2em !important;
+}
