--- a/client/videos-app/src/App.css
+++ b/client/videos-app/src/App.css
@@ -49,7 +49,8 @@ body{
 .container {
     /* border: 1px solid black; */
     border-radius: 20px;
-    background-color: rgb(31, 41, 55);
+    /* background-color: rgb(31, 41, 55); */
+    background: linear-gradient(to right, #1f2937, #273446); 
     padding: 20px;
     /* display: flex;
     flex-direction: column; */
